--- a/css/style.css
+++ b/css/style.css
@@ -205,4 +205,14 @@ ul , ol{
     font-family: var(--Roboto);
     color: #020202;
 }
+footer{
+    margin-top: 50px;
+    font-size: 15px;
+    text-align: center;
+    font-weight: 500;
+}
+footer a{
+    font-weight: 900;
+    color: rgb(26, 127, 209);
+}
 /*===== Bot and Form CSS Part End =====*/
